youfull/objects/Earning_Illustrator_Row__c.object
<CustomObject>
    <fields>
        <fullName>G1_Active_Reps_Txt__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>G1 Active Reps</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G1_Adv_Unit_Leaders_Txt__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>G1 Adv Unit Leaders</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G1_Exec_Unit_Leaders_Txt__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>G1 Exec Unit Leaders</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G1_Sr_Exec_Unit_Leaders_1_Txt__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>G1 Sr Exec Unit 1 Leaders</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G1_Sr_Exec_Unit_Leaders_2_Txt__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>G1 Sr Exec Unit 2 Leaders</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G1_Sr_Exec_Unit_Leaders_3_Txt__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>G1 Sr Exec Unit 3 Leaders</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G1_Unit_Leaders_Txt__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>G1 Unit Leaders</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leadership_Title_Txt__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Leadership Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Volume_Txt__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Personal Volume</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Unit_Sales_Txt__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Total Unit Sales</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Earning Illustrator Row</label>
    <nameField>
        <label>Estimated Erng</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Earning Illustrator Row</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>